--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="tab1">tab1</string>
     <string name="tab2">tab2</string>
     <string name="tab3">tab3</string>
+    <string name="tab4">tab4</string>
 </resources>
