--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">food</string>
+    <string name="app_name">食刻</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="notice">接下來您將要開始完成「食刻」(以下將以本平台代稱)之帳號申請，申請過程中您的資料將不會外流給其他廠商，僅作為本平台紀錄以及遇到糾紛時作為裁定的依據，請放心填入資料。</string>
     <string name="tab1">主頁</string>
